# compress-json-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.sh  create-release-tag.sh  get-version.sh  publish.sh  release.sh
src/: boolean.rs  config.rs  core.rs  debug.rs  encode.rs  helpers.rs  lib.rs  memory.rs  number.rs
tests/: compress_roundtrip.rs  core_test.rs  helpers_test.rs  number_test.rs  payload.json  sample.rs  special_values_test.rs
