[package]
name = "compress-json-rs"
version = "0.3.1"
edition = "2024"
description = "Store JSON data in a space-efficient compressed form, with round-trip compression/decompression."
license = "BSD-2-Clause"
repository = "https://github.com/web-mech/compress-json-rs"
homepage = "https://github.com/web-mech/compress-json-rs#readme"
documentation = "https://docs.rs/compress-json-rs"
keywords = ["json", "compress", "decompress", "serde"]
categories = ["data-structures", "compression", "parser-implementations", "encoding"]

 [dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
incremental = false

[profile.test]
incremental = false
